--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\GM.cs" />
+     <Compile Include="Assets\Script\GameVisual.cs" />
+     <Compile Include="Assets\Script\GoHomeScript.cs" />
      <Compile Include="Assets\Script\MenuScript.cs" />
      <Compile Include="Assets\Script\NoteScript.cs" />
      <Compile Include="Assets\Script\SoundVisual.cs" />
