--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,11 +47,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\GM.cs" />
+     <Compile Include="Assets\Script\GM2.cs" />
+     <Compile Include="Assets\Script\GM3.cs" />
+     <Compile Include="Assets\Script\GM4.cs" />
+     <Compile Include="Assets\Script\GM5.cs" />
      <Compile Include="Assets\Script\GameVisual.cs" />
      <Compile Include="Assets\Script\GoHomeScript.cs" />
      <Compile Include="Assets\Script\MenuScript.cs" />
      <Compile Include="Assets\Script\NoteScript.cs" />
      <Compile Include="Assets\Script\SoundVisual.cs" />
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -66,6 +73,9 @@
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
